css/styles.css
body, html {
    margin: auto;
    max-width: 100vw;
    scroll-behavior: smooth;
}

/*FONTS*/

main a, h1, h2, h3, .h3, .btn-primary, .container-dropdown-text label, .hamburger-font, .d-nav {
    font-weight: normal;
}

.hamburger-font, .btn-primary, .container-dropdown-text label, .d-nav, h2, .h2, h4, h3 {
    text-transform: uppercase;
}

.hamburger-font, .container-dropdown-text .news, .w-r, footer p, footer a, footer table, footer h3 {
    color: #fff;    
} 

.hamburger-font, .container-dropdown-text label {
    font-size: 16px;
}

a {
    text-decoration: none;
}

p, .mobile.nav input::placeholder, .aside-search::placeholder, a, td, address, .hamburger-font {
    font-family: 'Roboto Slab', serif;
}

p {
    line-height: 1.6;
}

h2, .h2, .d-nav, h3, .breadcrumb {
    font-family: 'Lato', sans-serif;
}

.d-nav {
    font-size: 19px;
    color: #000; 
    font-weight: 500;
}

h2, .h2 {
    color: #235CA9;
    font-size: 22px;
}


h3, .h2, .container-dropdown-text label p {
    margin: 0;
}

.w-r {
    background-color: #631C38;
    padding: 2% 1%;
    font-size: 18px;
    margin: 0;
}

.mobile.nav input::placeholder, .aside-search::placeholder {
    color: #575757;
    font-style: italic;
}

footer h3 {
    background-color: unset;
    text-transform: unset;
    padding: 2% 0;
}

footer p {
    margin: 0;
}

footer a {
    text-decoration: underline;
}

.tiny-font {
    font-size: 12px;
    color: rgb(231, 231, 231);
    margin: 3% 0 0;
}

address {
    font-style: normal;
    
}

aside p {
    margin: 0 0 3% 0;
}

.breadcrumb {
    font-size: 14px;
    color: #575757; 
}

.breadcrumb:hover {
    text-decoration: underline;
}

.container-dropdown-text.faq label {
    color: #000;
    font-size: 17px;
}

.container-dropdown-text label, .btn-primary {
    font-family: 'IBM Plex Sans', sans-serif;
}


/*BUTTONS*/

.btn-primary {
    color: #000;
    background-color: #FFB147;
    border: unset;
    font-size: 16px;
    text-align: center; 
}

.container-dropdown-text label, .btn-primary {
    padding: 8px;
}

/*CONTAINERS*/

.container-columns {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: auto;
}

.container-rows {
    display: flex;
}

.container-dropdown-text {
    background-color: #286125;
}

.centered-content {
    display: flex;
    justify-content: center;
}

.m-gap, .gap {
    gap: 5vh;
}

.gap-small {
    gap: 2vh;
}

.gap-tiny {
    gap: 0.8vh;
}

/*GENEREAL*/

img {
    object-fit: contain;
    margin: 0;
    padding: 0;
}

.icon {
    height: 8px;
    padding: 4px 10px;
    
}

.less-gap {
    margin: 6% 0 2%;
}

p {
    margin: 5px 0;
}


.spaced-content {
    justify-content: space-between;
}

.hidden {
    display: none;
}

.visually-hidden {
    visibility: hidden;
    position: absolute;
    color: #000;
    background-color: #fff;
}

.shadow {
    box-shadow: 0px 0px 20px 1px rgb(150, 150, 150);
}

.container-dropdown-text label {
    display: flex;
}

.container-dropdown-text input {
    position: absolute;
    left: -110vw;
}

.box-text {
    margin: 0;
    padding: 5px;
    background-color: #fff;
}

#news1:checked ~ .dropdown-text, #news2:checked ~ .dropdown-text, #news3:checked ~ .dropdown-text,
#q1:checked ~ .dropdown-text, #q2:checked ~ .dropdown-text, #q3:checked ~ .dropdown-text, #q4:checked ~ .dropdown-text, 
#q5:checked ~ .dropdown-text, #q6:checked ~ .dropdown-text {
    display: block; 
}

.dropdown-text {
    width: 100%;
}

.container-dropdown-text.faq {
    background-color: unset;
}

.container-dropdown-text.faq .dropdown-text, .container-dropdown-text.faq .dropdown-text p, .container-dropdown-text.faq .dropdown-text table {
    background-color: #f0dec6;
}

/*.container-dropdown-text.faq .dropdown-text.hidden {
    border: solid 1px #cfcfcf;
    width: 100%;
}*/

.max250 {
    max-width: 250px;
    width: 100%;
}

iframe {
    width: 100%;
    border: none;
    height: 200px;
}

.margintop-medium {
    margin: 50px 0 0;
}

.margin-small {
    margin: 18px 0;
}

.margin-tiny {
    margin: 9px 0;
}

.margin-milli {
    margin: 5px 0;
}

.margin-micro {
    margin: 2px 0;
}

aside {
    max-width: 500px;
}

.cont-uniform {
    height: 100%;
}
/*
.highlight {
    box-sizing: content-box;
    color: #fff;
    text-transform: uppercase;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 24px;
    background-color: #235CA9;
    border: solid 2px #631C38;
}
*/

/*HEADER*/

.logo-banner {
    height: 12vh;
    flex-grow: 1;
}

.logo-banner a {
    display: flex;
    padding: 16px;
}

.mobile.nav, footer {
    background-color: #286125;
    padding: 0 10% 0 10%;
    justify-content: space-between;
    align-items: center;
}


footer {
    padding: 5% 10%;
}

.mobile.nav:first-child {
    justify-content: left;
}

.mobile .input-search input[type="text" i] {
    width: 80%;
    border: solid 1px #fff;
}

.container-hamburger {
    padding: 10px 0;
}

.container-hamburger label {
    display: flex;
    align-items: center;
}

.container-hamburger label span {
    padding-right: 2vw;
}

.container-hamburger input {
    position: absolute;
    left: -100vw;
}

.hamburger-menu {
    position: absolute;
    right: 0%;
    top: 12vh;
    z-index: 99;
    width: 100%;
    background-color: #fff;
}

nav ul {
    padding: 0;
    margin: 0 0 2% 0;
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    gap: 2%;
}

nav ul a, nav ul li {
    box-sizing: border-box;
    display: inline-flex;
    flex-grow: 1;
    background: #286125;
    justify-content: center;
    align-items: center;
}

nav ul li {
    padding: 9px;
}

#toggle:checked ~ .hamburger-menu {
    display: block;
}

/*NOT HEADER*/

main {
    display: flex;
    margin: 8%;
}

.desktop {
    display: none;
}

.iPad-mini-only {
    display: none;
}

code {
    font: inherit;
}

@media screen and (min-width: 760px) {

    /*GENERAL*/

    .desktop {
        display: block;
    }

    .container-columns.desktop {
        display: flex;
    }

    .mobile {
        display: none;
    }

    .d-cont-header-main {
        display: flex;
        flex-direction: column;
        justify-content: center;
        width: 1024px;
        margin: auto;
    }

    header {
        margin: 42px 0 30px;
    }

    main {
        margin: unset;
        margin-bottom: 24px;
    }

    .d-cont-rows {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .reverse {
        flex-direction: row-reverse;
    }

    .m-gap {
        gap: 0;
    }

    .d-gap-small {
        gap: 18.5px;
    }

    .d-margin-medium {
        margin: 50px 0;
    }

    .d-margin-small {
        margin: 18px 0;
    }

    .d-rows-child {
        width: 31%;
    }
    
    .d-rows-child.hover:hover {
        transform: scale(1.05);
        transition: ease-in-out 0.4s;
    }

    .d-rows-twin {
        width: 47%;
    }

    .d-rows-bigtwin {
        width: 48%;
    }

    .d-rows-bigchild {
        width: 65.75%;
    }

    aside.desktop {
        min-width: 250px;
    }

    .btn-primary:hover {
        background-color: #f39c22;
        transition-duration: 1s;
    }

    .btn-small {
        width: 60%;
        align-self: center;
    }

    .btn-smaller {
        width: 40%;
        align-self: center;
    }

    .container-dropdown-text.faq .dropdown-text, .container-dropdown-text.faq .dropdown-text p, .container-dropdown-text.faq .dropdown-text table {
        background-color: unset;
    }

    .desktop.index-search {
        margin-top: 68px;
    }

    nav, footer {
        padding: unset;
    }

    nav.desktop {
        display: flex !important;
        background-color: unset;
        align-items: flex-start;
    }

    nav.desktop ul {
        padding: 0;
        margin: 0;
        display: flex !important;
        flex-grow: 1;
        justify-content: end;
        gap: 18px;
    }

    nav ul li {
        background-color: unset;
        padding: 0;
        flex-grow: unset;
    }

    .d-nav {
        padding: 5px 0 0;
        border: solid 1px #fff;
        background-color: unset;
    }

    .d-nav:hover {
        border-bottom: solid 1px #575757;
        transition-duration: 800ms;
    }

    .grow2 {
        flex-grow: 2;
    }

    /*HEADER*/

    .logo-banner {
        justify-content: unset;
        align-items: flex-start;
    }

    .logo-banner a {
        padding: unset;
    }

    footer {
        padding: 2% 0;
        margin-top: 3%;
    }

    footer .container-columns.gap {
        width: 1024px;
        margin: auto;
        gap: 0;
    }

    footer a {
        text-decoration: none;
    }

    footer a:hover {
        text-decoration: underline;
    }
}

@media screen and (min-width: 760px) and (max-width: 1100px) {
    
    .iPad-v-hidden {
        visibility: hidden;
        position: absolute;
        color: #000;
        background-color: #fff;
    }

    .d-cont-header-main {
        width: 900px;
    }

    .logo-banner {
        height: auto;
        width: 100%;
        justify-content: center;
    }

    footer .container-columns.gap {
        width: 900px;
    }

    .iPad-columns {
        flex-direction: column;
    }

    nav.desktop {
        display: flex !important;
        background-color: unset;
    }

    nav.desktop ul {
        padding: 0;
        margin: 36px 0 0;
        display: flex !important;
        flex-grow: 1;
        justify-content: space-between;
        gap: 18px;

    }
}

@media screen and (min-width: 760px) and (max-width: 980px) {
    
    .d-cont-header-main {
        width: 700px;
    }

    footer .container-columns.gap {
        width: 700px;
    }

    .iPad-mini-columns {
        flex-direction: column;
    }

    .d-rows-bigchild.iPad-mini {
        width: 60%;
    }

    .d-rows-child.iPad-mini {
        width: 36%;
    }

    .d-rows-bigtwin.iPad-adultchild, .d-rows-twin.iPad-adultchild, .d-rows-bigchild.iPad-adultchild, .d-rows-child.iPad-adultchild {
        width: 100%;
    }

    .d-rows-bigchild.iPad-bigtwin, .container-columns.d-rows-child.iPad-bigtwin {
        width: 48%;
    }

    .container-dropdown-text.faq .d-rows-bigchild {
        width: 100%;
    }

    .container-columns.d-rows-child.iPad-centered-twin {
        width: 436px;
        margin-left: 132px;
    }

    .cont-non-uniform {
        align-items: flex-start;
    }

    .iPad-centered {
        justify-content: center;
    }

    .iPad-mini-hidden {
        display: none;
    }

    .iPad-mini-v-hidden {
        visibility: hidden;
        position: absolute;
        color: #000;
        background-color: #fff;        
    }

    .iPad-mini-only {
        display: unset;
    }

    img.iPad-mini-only {
        display: block;
        width: 350px;
        float: right;
        padding: 24px;
    }

    .break {
        display: block;
        margin: 6px 0;
    }

}

